syntax = "proto3";
package cometbft.types.v1beta2;

option go_package = "github.com/cometbft/cometbft/api/cometbft/types/v1beta2";

import "gogoproto/gogo.proto";
import "cometbft/types/v1beta1/params.proto";

option (gogoproto.equal_all) = true;

// ConsensusParams contains consensus critical parameters that determine the
// validity of blocks.
message ConsensusParams {
  BlockParams             block     = 1;
  v1beta1.EvidenceParams  evidence  = 2;
  v1beta1.ValidatorParams validator = 3;
  v1beta1.VersionParams   version   = 4;
}

// BlockParams contains limits on the block size.
message BlockParams {
  // Max block size, in bytes.
  // Note: must be greater than 0
  int64 max_bytes = 1;
  // Max gas per block.
  // Note: must be greater or equal to -1
  int64 max_gas = 2;

  reserved 3;  // was TimeIotaMs see https://github.com/tendermint/tendermint/pull/5792
}
